fixed spacing for join us button

--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,8 @@ body {
 .sponsorship-section {
   margin-top: 5%;
   margin: 0%;
-  padding: 2.5% 10%;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .sponsor-package-info {
@@ -437,7 +438,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 5vw 0;
+  margin-top: 5vw;
 }
 
 .our-sponsors h2 {
